fix wrapping for parallelism slider copy

--- a/css/shared/new-pricing.less
+++ b/css/shared/new-pricing.less
@@ -193,11 +193,8 @@
   }
 }
 .controls-parallelism {
-  p {
-    .flexy();
-  }
   strong {
-    margin: 0 .25em;
+    display: inline-block;
     color: @green;
     text-align: center;
     min-width: 1em;
